feat(backend): Добавлены query для запроса результатов
